--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-project(cv_test)
+project(seg)
 
 find_package(PCL 1.7  REQUIRED)
 
@@ -8,6 +8,6 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable (cv_test seg.cpp)
-target_link_libraries (cv_test ${PCL_LIBRARIES})
+add_executable (seg euclidean_segment.cpp)
+target_link_libraries (seg ${PCL_LIBRARIES})
 
